# OpenGL_SDL2

./: .gitignore  APPLE.md  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: C01_01.cpp  C01_02  C01_02.cpp  glad.c  loadOBJ.cpp  loadOBJ.h  main.cpp  sample.cpp  shader_frag.glsl  shader_vertex.glsl
src/inclass/: C01_01  C01_02  C03_VBO.cpp  C05_RenderCube.cpp  inclass05.cpp
